--- a/style.css
+++ b/style.css
@@ -6,3 +6,99 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+
+nav {
+    height: 80px;
+    display: flex;
+}
+
+img {
+    width: 100%;
+}
+
+.nav__container {
+    width: 100%;
+    max-width: 1200px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto; /* to center the items and space nicely */
+    padding: 0 24px; /* space items from left and right of screen*/
+}
+
+.purple {
+    color: purple;
+}
+ul {
+    display: flex;
+}
+
+li {
+    list-style-type: none;
+    
+}
+
+.logo {
+    width: 160px;
+}
+
+.nav__link {
+    margin-left: 16px;
+    text-decoration: none;
+    font-size: 20px;
+    color: purple;
+    font-weight: bold;
+    padding: 8px; /* to add space between nav primary border and text*/
+}
+
+.nav__link:hover {
+    text-decoration: underline;
+}
+
+.nav__link--primary {
+    border: 2px solid purple;
+    border-radius: 4px;
+}
+
+.nav__link--primary:hover { /* put it under nav link hover (priority) to work*/
+    text-decoration: none;
+}
+
+#landing {
+    background-color: rgba(115, 66, 214, 0.1);
+}
+
+header {
+    height: calc(100vh-5px);
+}
+
+.header__container {
+    width: 100%;
+    max-width: 720px;
+    margin: 0 auto; /* to center it*/
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+h1 {
+    font-size: 56px;
+    color: purple;
+    margin-bottom: 24px;
+    text-align: center;
+}
+
+h2 {
+    font-size: 32px;
+    text-align: center;
+    margin-bottom: 32px;
+}
+
+.btn {
+    background-color: #7342d6;
+    color: white;
+    padding: 12px 24px; /* space between text and button box border*/
+    font-size: 20px;
+    border-radius: 4px;
+    border: none;
+}
