--- a/style.css
+++ b/style.css
@@ -81,6 +81,11 @@ header {
     justify-content: space-between;
 }
 
+.header__description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 h1 {
     font-size: 56px;
     color: purple;
@@ -92,6 +97,14 @@ h2 {
     font-size: 32px;
     text-align: center;
     margin-bottom: 32px;
+}
+
+button {
+    cursor: pointer;
+}
+
+button:active {
+    transform: translateY(1px);
 }
 
 .btn {
