--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ nav {
 
 img {
     width: 100%;
+    height: 100%;
+    max-height: 50vh;
 }
 
 .nav__container {
@@ -115,3 +117,21 @@ button:active {
     border-radius: 4px;
     border: none;
 }
+
+.header__img--wrapper {
+    padding: 20px;
+}
+
+.container {
+    padding: 56px 0;
+}
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    
+}
+
+
+/* HIGHLIGHTS */
+
