--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ img {
     max-height: 50vh;
 }
 
+p {
+    line-height: 1.5;
+}
+
 .nav__container {
     width: 100%;
     max-width: 1200px;
@@ -120,6 +124,7 @@ button:active {
 
 .header__img--wrapper {
     padding: 20px;
+    z-index: 2; /* item that shouldnt be over another item*/
 }
 
 .container {
@@ -129,9 +134,77 @@ button:active {
 .row {
     width: 100%;
     max-width: 1200px;
-    
+    margin: 0 auto;
 }
 
 
 /* HIGHLIGHTS */
+
+#highlights {
+    position: relative;
+}
+
+#highlights:before {
+    background: url('./assets/wave.svg');
+    content: ""; /* need to have when select pseudoelement for (before@after)*/
+    position: absolute;
+    width: 101vw;
+    height:11vw;
+    top: 1px;
+    left: 0;
+    z-index: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: translateY(-100%);
+}
+
+#highlights::after {
+    background: url('./assets/wave.svg');
+    content: ""; /* need to have when select pseudoelement for (before@after)*/
+    position: absolute;
+    width: 101vw;
+    height:11vw;
+    bottom: 1px;
+    left: 0;
+    z-index: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: translateY(100%); /*push it down 100%*/
+}
+
+.highlight__wrapper {
+    display: flex;
+}
+
+.highlight {
+    padding: 0 24px; /* space between highlights*/
+    width: calc(100% / 3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.highlight__para {
+    text-align: center;
+    max-width: 280px;
+}
+
+.highlight__img {
+    border: 2px solid #7342d679;
+    color: #7342d6;
+    height: 100px;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    font-size: 32px;
+    margin-bottom: 24px;
+}
+
+.highlight__subtitle {
+    font-size: 20px;
+    margin-bottom: 16px;
+}
 
