--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+.container {
+    padding: 56px;
+}
+
 nav {
     height: 80px;
     display: flex;
@@ -149,7 +158,7 @@ button:active {
     content: ""; /* need to have when select pseudoelement for (before@after)*/
     position: absolute;
     width: 101vw;
-    height:11vw;
+    height: 12vw;
     top: 1px;
     left: 0;
     z-index: 1;
@@ -163,13 +172,13 @@ button:active {
     content: ""; /* need to have when select pseudoelement for (before@after)*/
     position: absolute;
     width: 101vw;
-    height:11vw;
+    height:12vw;
     bottom: 1px;
     left: 0;
     z-index: 1;
     background-size: cover;
     background-repeat: no-repeat;
-    transform: translateY(100%); /*push it down 100%*/
+    transform: translateY(100%) rotate(180deg); /* rotate the wave*/ /*push it down 100%*/
 }
 
 .highlight__wrapper {
@@ -206,5 +215,12 @@ button:active {
 .highlight__subtitle {
     font-size: 20px;
     margin-bottom: 16px;
+}
+
+/* FEATURES */
+
+#features {
+    background-color: rgba(115, 66, 214, 0.1);
+    height: 1000px;
 }
 
