--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ button:active {
 
 /* HIGHLIGHTS */
 
+
 #highlights {
     position: relative;
 }
@@ -223,4 +224,4 @@ button:active {
     background-color: rgba(115, 66, 214, 0.1);
     height: 1000px;
 }
-
+ /*hey now to be cont */
