--- a/style.css
+++ b/style.css
@@ -154,31 +154,26 @@ button:active {
     position: relative;
 }
 
-#highlights:before {
-    background: url('./assets/wave.svg');
-    content: ""; /* need to have when select pseudoelement for (before@after)*/
-    position: absolute;
-    width: 101vw;
-    height: 12vw;
-    top: 1px;
-    left: 0;
-    z-index: 1;
-    background-size: cover;
-    background-repeat: no-repeat;
-    transform: translateY(-100%);
-}
-
+#highlights::before,
 #highlights::after {
     background: url('./assets/wave.svg');
     content: ""; /* need to have when select pseudoelement for (before@after)*/
     position: absolute;
     width: 101vw;
-    height:12vw;
-    bottom: 1px;
+    height: 12vw;
     left: 0;
     z-index: 1;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+#highlights:before {
+    transform: translateY(-100%);
+    top: 1px;
+}
+
+#highlights::after {
+    bottom: 1px;
     transform: translateY(100%) rotate(180deg); /* rotate the wave*/ /*push it down 100%*/
 }
 
