--- a/style.css
+++ b/style.css
@@ -146,6 +146,12 @@ button:active {
     margin: 0 auto;
 }
 
+.row__column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 /* HIGHLIGHTS */
 
@@ -245,8 +251,6 @@ button:active {
    
  }
 
- }
-
  .book:hover .book__img {
     transform: scale(1.03);
  }
@@ -272,6 +276,10 @@ button:active {
     color: #bfbfbf;
  }
  
- /* LATEST */
+ /* Explore */
 
- .
+ #explore {
+    background-color: rgba(115, 66, 214, 0.1);
+ }
+
+ 
