--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     max-width: 100vw;
     overflow-x: hidden;
@@ -29,6 +33,14 @@ img {
 
 p {
     line-height: 1.5;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 .nav__container {
@@ -150,6 +162,10 @@ button:active {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.no-cursor {
+    cursor:not-allowed;
 }
 
 
@@ -282,4 +298,32 @@ button:active {
     background-color: rgba(115, 66, 214, 0.1);
  }
 
+  /* Footer */
+
+  footer {
+    background-color: #242424;
+  }
+
+  .footer__logo {
+    display: flex;
+  }
+
+  .footer__logo--img {
+    width: 160px;
+    filter: grayscale(1) invert(1); /* turn black to white @ viceversa, grayscale turn everything to black then invert to white */ 
+  }
+
+  .footer__link,
+  .footer__copy {
+    color: #fff;
+  }
+
+  .footer__list {
+    margin: 20px 0 24px 0;
+  }
+
+  .footer__link {
+    padding: 0 5px;
+  }
+  
  
