--- a/style.css
+++ b/style.css
@@ -185,6 +185,24 @@ button:active {
     right: 0;
     left: 0;
     z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu__link {
+    color: white;
+}
+
+.menu__list {
+    padding: 32px 0;
+    font-size: 40px;
 }
 
 .btn__menu--close {
